--- a/views/home.pug
+++ b/views/home.pug
@@ -3,10 +3,24 @@ extends layout/mainLayout.pug
 block content
     h1 PhoneBook
     div
-        each contact in allContacts
-            div(class="card" style="width: 30rem;")
-                h3.list-group-item Name: #{contact.name}
-                h6 Phone: #{contact.phone}
-                h6 Email: #{contact.email}
-                a(href="/edit/" +contact.id) edit
-                a(href="/delete/" +contact.id) delete
+            table.table
+                thread
+                    tr 
+                        th FullName
+                        th Phone
+                        th Email
+                        th Actions
+                each contact in allContacts
+                 tbody
+                    tr
+                        td 
+                            h4 #{contact.name}
+                        td 
+                            h4 #{contact.phone}
+                        td 
+                            h4 #{contact.email}
+                        td
+                            a.btn.btn-primary(href="/edit/" +contact.id) Edit
+                            |
+                            |
+                            a.btn.btn-primary(href="/delete/" +contact.id) Delete
